[Add] Cuisine Db, Controller and SeedData
Able to show CuisineId but not the cuisine Name in the ListView - needs to associate the cuisineId from recipe wiht cuisines's Id

--- a/Views/Recipes/ViewRecipe.cshtml
+++ b/Views/Recipes/ViewRecipe.cshtml
@@ -21,7 +21,7 @@
         <dd>The original cuisine:
         <dd>
         <dt>
-            @Model.Cuisine
+            @*@Model.Cuisine.Name*@
         </dt>
         <dd>How to do It:
         <dd>
