--- a/Views/CRUD/AddRecipe.cshtml
+++ b/Views/CRUD/AddRecipe.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RecipeSite.Models.Recipe;
 
 @{
-    ViewData["Title"] = "Create Recipe";
+    @*ViewData["Title"] = "Create Recipe";*@
 }
 
 
