--- a/Views/Recipes/RecipeList.cshtml
+++ b/Views/Recipes/RecipeList.cshtml
@@ -1,7 +1,7 @@
-﻿@model RecipesListViewModel
+﻿@model IEnumerable<RecipeSite.Models.Recipe>
 
 <p>
-    <a asp-controller="CRUD"asp-action="AddRecipe" class="btn btn-success">Create New</a>
+    <a asp-controller="CRUD" asp-action="AddRecipe" class="btn btn-success">Create New</a>
 </p>
 
 <table class="table table-striped table-hover">
@@ -20,31 +20,25 @@
 
     <tbody>
 
-        @{
-            foreach (var item in Model.Recipes)
-            {
-                <tr>
-   
-                    <td>
-                        @item.Name
-                    </td>
-                    <td>
-                        @item.Cuisine
-                    </td>
-                    <td>
-                        <a asp-controller="Recipes" asp-action="ViewRecipe" asp-route-id="@item.Id" class="btn btn-info">Details</a>                      
-                    </td>
-                </tr>
+        @{ foreach (var item in Model)
+                        {
+            <tr>
 
-
-            }
-
-        }
+                <td>
+                 @item.Name
+                </td>
+                <td>
+                    @item.CuisineId
+                </td>
+                <td>
+                    <a asp-controller="Recipes" asp-action="ViewRecipe" asp-route-id="@item.Id" class="btn btn-info">Details</a>
+                </td>
+            </tr> } }
 
     </tbody>
 
 
 </table>
 
-<div page-model="@Model.PagingInfo" page-action="RecipeList"></div>
+@*<div page-model="@Model.PagingInfo" page-action="RecipeList"></div>*@
 
