--- a/Views/Shared/CreatePartial.cshtml
+++ b/Views/Shared/CreatePartial.cshtml
@@ -1,4 +1,5 @@
-﻿@model RecipeSite.Models.Recipe;
+﻿@model RecipeSite.Models.ViewModels.RecipesListViewModel
+
 
 <h4>Recipe</h4>
 
@@ -23,36 +24,32 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             @if (Model != null)
             {
-                <input type="hidden" asp-for="Id" value="@Model.Id" />
+                <input type="hidden" asp-for="Recipe.Id" value="@Model" />
             }
 
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="Recipe.Name" class="control-label"></label>
+                <input asp-for="Recipe.Name" class="form-control" />
+                <span asp-validation-for="Recipe.Name" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <Label asp-for="Cuisine" class="control-label"></Label>
-                <select asp-for="Cuisine">
-                    <option value="1">French</option>
-                    <option value="2">American</option>
-                    <option value="3">Italian</option>
-                    <option value="4">Japanese</option>
-                    <option value="5">Chinese</option>
-                    <option value="6">Brazilian</option>
+                <Label asp-for="Recipe.CuisineId" class="control-label"></Label>
+                <select asp-for="Recipe.CuisineId" 
+                        asp-items="@(new SelectList(Model.Cuisines,"Name"))" class="form-control">   
                 </select>
                 <span asp-validation-for="Cuisine" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="Preparation" class="control-label"></label>
-                <input asp-for="Preparation" class="form-control" />
-                <span asp-validation-for="Preparation" class="text-danger"></span>
+                <label asp-for="Recipe.Preparation" class="control-label"></label>
+                <input asp-for="Recipe.Preparation" class="form-control" />
+                <span asp-validation-for="Recipe.Preparation" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Ingredients" class="control-label"></label>
-                <input asp-for="Ingredients" class="form-control" />
-                <span asp-validation-for="Ingredients" class="text-danger"></span>
+                <label asp-for="Recipe.Ingredients" class="control-label"></label>
+                <input asp-for="Recipe.Ingredients" class="form-control" />
+                <span asp-validation-for="Recipe.Ingredients" class="text-danger"></span>
             </div>
 
             @if (Model != null)
