--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿
-@{
-    ViewData["Title"] = "Index";
-}
+@{ ViewData["Title"] = "Index"; }
 
+@{ 
+@:<em>Thank you</em>
+    }
 <style>
     body {
         /*width: 100%;
@@ -21,8 +22,8 @@
     }
 
     footer {
-        position:absolute;
-        bottom:0px;
+        position: absolute;
+        bottom: 0px;
     }
 </style>
 <body>
